--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ name: Release
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'      # v1.0.0
-      - 'v[0-9]+.[0-9]+.[0-9]+-*'    # v1.0.0-beta.1, v1.0.0-rc.1
+      - "v[0-9]+.[0-9]+.[0-9]+" # v1.0.0
+      - "v[0-9]+.[0-9]+.[0-9]+-*" # v1.0.0-beta.1, v1.0.0-rc.1
 
 env:
   CARGO_TERM_COLOR: always
@@ -142,7 +142,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
